<resources>
    <string name="app_name">AppConsultaDisciplina</string>
    <string name="app_lista_disciplina">Preencha os dados abaixo:</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_matricula">Matricula</string>
    <string name="txt_disciplina">Disciplina</string>
    <string name="txt_telefone">Telefone</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="pesquisa_de_intencao_de_matricula">Pesquisa de Intenção de Optativa</string>
</resources>